feat: added translations to transactions index view

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -34,3 +34,22 @@ en:
     password_label: "Password"
     password_label_placeholder: "Enter your Password"
     sign_in_label: "Sign In"
+  transactions:
+    transactions_label: "Transactions"
+    add_transaction_label: "Add Transaction"
+    type_label: "Type"
+    category_label: "Category"
+    start_date_label: "Start Date"
+    end_date_label: "End Date"
+    filter_label: "Filter"
+    expense_label: "Expense"
+    income_label: "Income"
+    total_income_label: "Total Income"
+    total_expense_label: "Total Expense"
+    total_balance_label: "Total Balance"
+    date_title: "Date"
+    type_title: "Type"
+    amount_title: "Amount"
+    category_title: "Category"
+    description_title: "Description"
+    tags_title: "Tags"
