--- a/config/locales/jp.yml
+++ b/config/locales/jp.yml
@@ -34,3 +34,22 @@ jp:
     password_label: "パスワード"
     password_label_placeholder: "パスワードを入力してください"
     sign_in_label: "サイン"
+  transactions:
+    transactions_label: "取引"
+    add_transaction_label: "新しい取引を追加"
+    type_label: "種類"
+    category_label: "カテゴリ"
+    start_date_label: "開始日"
+    end_date_label: "終了日"
+    filter_label: "絞り込む"
+    expense_label: "支出"
+    income_label: "収入"
+    total_income_label: "総収入"
+    total_expense_label: "総支出"
+    total_balance_label: "残高"
+    date_title: "日付"
+    type_title: "種類"
+    amount_title: "金額"
+    category_title: "カテゴリ"
+    description_title: "詳細"
+    tags_title: "タグ"
